@@ -39,7 +39,8 @@ namespace DXGI
 		if( RECORD_DXGI( ptr->QueryInterface( IID_IDXGIDevice1, reinterpret_cast<void**>( &result ) ) ).IsFailure )
 			throw gcnew DXGIException( Result::Last );
 
-		Construct( result );
+		ComObject^ other = ObjectTable::Find(IntPtr(result));
+		Construct(result, other, other == nullptr);
 	}
 
 	int Device1::MaximumFrameLatency::get()
